--- a/sample_config.env
+++ b/sample_config.env
@@ -1,14 +1,14 @@
-# Masukan APP ID ambil di web my.telegram.org
+
 APP_ID = "6"
 
-# Masukan API HASH ambil di web my.telegram.org
+
 API_HASH = "eb06d4abfb49dc3eeb1aeb98ae0f581e"
 
-# Masukan BOT TOKEN dari @botfather
-TG_BOT_TOKEN = "10010102:2abcdefghijklmnopqrstuvwxyz"
 
-# Masukan User ID untuk hak ADMINS di bot
-# Gunakan Spasi Untuk Pemisah User ID [ Untuk Multi ADMINS ]
+TG_BOT_TOKEN = ""
+
+
+
 ADMINS = "1234567890"
 
 # Masukan Username Telegram mu tanpa @
