--- a/sample_config.env
+++ b/sample_config.env
@@ -1,32 +1,12 @@
-
-APP_ID = "6"
-API_HASH = "eb06d4abfb49dc3eeb1aeb98ae0f581e"
+APP_ID = "2804370"
+API_HASH = "ddd256a23536957fb093a1b5b4a019bc"
 TG_BOT_TOKEN = ""
 
-
-
-ADMINS = "1234567890"
-
-# Masukan Username Telegram mu tanpa @
-OWNER = "mrismanaziz"
-
-# Masukan Chat ID dari Group Untuk Wajib Subscribenya
-# Bila tidak ingin dipakai Fsubnya, isi dengan 0
+ADMINS = ""
+OWNER = ""
 FORCE_SUB_GROUP = 0
-
-# Masukan Chat ID dari Channel Untuk Wajib Subscribenya
-# Bila tidak ingin dipakai Fsubnya, isi dengan 0
 FORCE_SUB_CHANNEL = 0
-
-# Masukan ID Channel Untuk [Channel Database]
 CHANNEL_ID = -100
-
-# URL Database Anda, Ambil dari https://elephantsql.com
-# Contoh: "postgres://userbot:userbot@localhost:5432/userbot"
 DATABASE_URL = ""
-
-# Fitur PROTECT_CONTENT adalah Untuk MENCEGAH pengguna bot untuk mendownload/memforward/mengscreenshot konten yang dikirim di bot
-# Untuk Mengaktifkan PROTECT_CONTENT Ubah ke True
-# Untuk Menonaktifkan PROTECT_CONTENT Ubah ke False
 PROTECT_CONTENT = False
 
