--- a/config.env
+++ b/config.env
@@ -2,8 +2,8 @@ APP_ID = "2804370"
 API_HASH = "ddd256a23536957fb093a1b5b4a019bc"
 TG_BOT_TOKEN = ""
 
-ADMINS = ""
-OWNER = ""
+ADMINS = "2111931868"
+OWNER = "ItsmeZypraz"
 FORCE_SUB_GROUP = 0
 FORCE_SUB_CHANNEL = 0
 CHANNEL_ID = -100
